mudei coisa pra carai

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   app:
@@ -14,26 +14,27 @@ services:
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - DATABASE_NAME=${DATABASE_NAME}
     ports:
-      - '3000:3000'
+      - "3000:3000"
     depends_on:
       - db
     networks:
       - mynetwork
 
   db:
-    image: mysql:8.0
-    container_name: mysql-db
+    image: mariadb:5.5
+    container_name: mariadb-db
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      TZ: "America/Sao_Paulo"
     ports:
-      - '3307:3306'
+      - "3307:3306"
     volumes:
       - mysql-data:/var/lib/mysql
-      - ./mcb-dump.sql:/docker-entrypoint-initdb.d/mcb-dump.sql
+    command: --character-set-server=utf8 --collation-server=utf8_general_ci
     networks:
       - mynetwork
 
