--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,9 @@ services:
       - mynetwork
 
   db:
-    image: mariadb:5.5
+    build:
+      context: ./mysql
+      dockerfile: Dockerfile
     container_name: mariadb-db
     restart: unless-stopped
     environment:
@@ -34,7 +36,7 @@ services:
       - "3307:3306"
     volumes:
       - mysql-data:/var/lib/mysql
-    command: --character-set-server=utf8 --collation-server=utf8_general_ci
+    # command: --character-set-server=utf8 --collation-server=utf8_general_ci
     networks:
       - mynetwork
 
